app/templates/deploy/k8s/np2/pod.yml
kind: DeploymentConfig
apiVersion: v1
metadata:
  namespace: dct-nextgen-services
  name: digital-service-banker-assignment-test-apiserver
spec:
  template:
    metadata:
      labels:
        name: digital-service-banker-assignment-test-apiserver
    spec:
      containers:
        - name: digital-service-banker-assignment-test-apiserver
          image: digital-service-banker-assignment-test-apiserver:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config-volume
              mountPath: /nodeapp/configmap
              readOnly: true
            - name: secret-volume
              mountPath: /nodeapp/secrets
              readOnly: true
          ports:
            - containerPort: 3905
      volumes:
        - name: config-volume
          configMap:
            name: digital-service-banker-assignment-test
        - name: secret-volume
          secret:
            secretName: digital-service-banker-assignment-test-secret
  selector:
    name: digital-service-banker-assignment-test-apiserver
  replicas: 1
