app/templates/deploy/k8s/np2/route.yml
apiVersion: v1
kind: Route
metadata:
  name: digital-service-banker-assignment-test-apiserver
  namespace: dct-nextgen-services
spec:
  host: dct-nxgn.corp.frbnp2.com
  path: /bnkrasgnmttesttest/v1
    tls:
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFWTCCA0GgAwIBAgITegAAAARY7d+PN30WQgAAAAAABDANBgkqhkiG9w0BAQsF
[...]
      uhFB8BnxK20TIT3Q+ncSaC7u3Ew5cZpHn0yBYQ8=
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFjjCCA3agAwIBAgIQXX25z0n/Oq9DKhG8VoUdAzANBgkqhkiG9w0BAQsFADAX
[...]
      yV363saJXh8hqvlyIRJIMEwVU46ZCWt25v641Okemgh3Hg==
      -----END CERTIFICATE-----
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFJDCCBAygAwIBAgITQwAABJ/G40zXbCOlvAAAAAAEnzANBgkqhkiG9w0BAQsF
[...]
      CMq1ZgAedv/xoIXtcctX1M1ccN0DvtIX
      -----END CERTIFICATE-----
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIEowIBAAKCAQEAnq7YQwVDsSiOsX8g88gee9JVVvQo8O5r9v3wzAbJoxswk3C5
[...]
      hosHFulXrcvpRacXxUbKRFAU+MA+ccYmfH6zuczdlRQRi45+x6MM
      -----END RSA PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: digital-service-banker-assignment-test-apiserver
    weight: 100
  wildcardPolicy: None
